Fix publication badge visibility in light mode

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -401,6 +401,7 @@ footer.sticky-bottom {
         abbr {
           display: inline-block;
           background-color: var(--global-theme-color);
+          color: white;
           padding-left: 1rem;
           padding-right: 1rem;
           a {
